GENTBE-1178: Fixed long social media urls overlapping.

--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -73,6 +73,7 @@ $googleplus-color: #C63D2D;
 
 .gent-social-large {
   display: none;
+  word-wrap: break-word;
 
   @include mq($bp-tablet-s) {
     display: block;
